# parakeet.cpp

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
benchmarks/: BENCHMARK.md
docs/: parity.md
examples/server/: openai_format.cpp
include/: parakeet_capi.h
scripts/: gen_band_ref.py  gen_benchmark_md.py  gen_nemo_baseline.py
src/: backend.cpp  backend.hpp  conformer.cpp  conformer.hpp  encoder.cpp  encoder.hpp  ggml_graph.hpp  joint.cpp  joint.hpp  model.cpp  parakeet_capi.cpp  pos_enc.cpp  pos_enc.hpp  prediction.cpp  prediction.hpp  relpos_attention.cpp  relpos_attention.hpp  streaming.hpp  subsampling.cpp  subsampling.hpp
tests/: CMakeLists.txt  stream_clips.hpp  test_capi_stream.cpp  test_capi_stream_json.cpp  test_encoder_batch_local.cpp  test_encoder_long.cpp  test_relpos_attention_local.cpp  test_relpos_attention_local_chunked.cpp  test_relpos_attention_local_memory.cpp  test_server_format.cpp  test_subsampling_tiling.cpp  test_transcribe_tiled.cpp
